objects/Salesforce_Org__c.object
<CustomObject>
    <description>This object will hold the current Salesforce Org accounts.</description>
    <fields>
        <fullName>ALM_Integrated__c</fullName>
        <label>ALM Integrated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Salesforce Org Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Subscription__c</fullName>
        <label>Active Subscription</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Uninstalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backend__c</fullName>
        <label>Backend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Backend</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD_Licenses_Enabled__c</fullName>
        <label>CAD Licenses Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCH_Licenses_Enabled__c</fullName>
        <description>Copado Compliance Hub Licenses enabled on the customer side.</description>
        <label>CCH Licenses Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCM_Licenses_Enabled__c</fullName>
        <label>CCM Licenses Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CST_Licenses_Enabled__c</fullName>
        <label>CST Licenses Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copado_Licenses_Enabled__c</fullName>
        <label>Copado Licenses Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copado_Server__c</fullName>
        <label>Copado Server</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>EU-West</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credits_Top_Up__c</fullName>
        <label>Credits Top-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <inlineHelpText>This value comes from Heroku backend with the number available Credits to consume.</inlineHelpText>
        <label>Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_callouts_to_Copado__c</fullName>
        <label>Deployment callouts to Copado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GCP_Status__c</fullName>
        <label>GCP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Migration Scheduled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Outreach Completed</fullName>
                </value>
                <value>
                    <fullName>Migration Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Git_Integrated__c</fullName>
        <label>Git Integrated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_App_Analytics_Sync__c</fullName>
        <inlineHelpText>Keeps track of the last date time that the usage data for this org was extracted. Next time the export process runs it will start from point in time.</inlineHelpText>
        <label>Last App Analytics Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Overall_Activity__c</fullName>
        <inlineHelpText>This is the last activity recorded based on any of the other step actions</inlineHelpText>
        <label>Last Overall Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Apex_Tests__c</fullName>
        <label>Last Used Apex Tests</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Apex__c</fullName>
        <label>Last Used Apex</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Build_Task__c</fullName>
        <label>Last Used Build Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Bulk_Data__c</fullName>
        <label>Last Used Bulk Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_CBM_Recalculation__c</fullName>
        <label>Last Used CBM Recalculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_CBM_Validation__c</fullName>
        <label>Last Used CBM Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Custom_Settings__c</fullName>
        <label>Last Used Custom Settings</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Data__c</fullName>
        <label>Last Used Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Delete_MetaData__c</fullName>
        <label>Last Used Delete MetaData</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Deployment__c</fullName>
        <label>Last Used Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Full_Permission_Set__c</fullName>
        <label>Last Used Full Permission Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Full_Profile__c</fullName>
        <label>Last Used Full Profile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Git_Backup__c</fullName>
        <label>Last Used Git Backup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Git_Metadata__c</fullName>
        <label>Last Used Git Metadata</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Git_Promotion__c</fullName>
        <label>Last Used Git Promotion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Org_Diff__c</fullName>
        <label>Last Used Org Diff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Selenium_Testing__c</fullName>
        <label>Last Used Selenium Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Snapshot_Difference__c</fullName>
        <label>Last Used Snapshot Difference</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Translations__c</fullName>
        <label>Last Used Translations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_URL_Callout__c</fullName>
        <label>Last Used URL Callout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Used_Users__c</fullName>
        <label>Last Used Users</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Salesforce Orgs</relationshipLabel>
        <relationshipName>Salesforce_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License User</label>
        <referenceTo>Salesforce_User__c</referenceTo>
        <relationshipLabel>Salesforce Orgs</relationshipLabel>
        <relationshipName>Salesforce_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensed_Seats__c</fullName>
        <label>Licensed Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Wave__c</fullName>
        <label>Migration Wave</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wave 1</fullName>
                </value>
                <value>
                    <fullName>Wave 2</fullName>
                </value>
                <value>
                    <fullName>Wave 3</fullName>
                </value>
                <value>
                    <fullName>Wave 4</fullName>
                </value>
                <value>
                    <fullName>Wave 5</fullName>
                </value>
                <value>
                    <fullName>Wave 6</fullName>
                </value>
                <value>
                    <fullName>Wave 7</fullName>
                </value>
                <value>
                    <fullName>Wave 8</fullName>
                </value>
                <value>
                    <fullName>Wave 9</fullName>
                </value>
                <value>
                    <fullName>Wave 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Licenses_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if customer has purchased EE + any of: CCM, CST, CAD</inlineHelpText>
        <label>Multi-Licenses Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Top_Up_Date__c</fullName>
        <inlineHelpText>This is a date which will be queried by Heroku to perform the top-ups on a daily basis</inlineHelpText>
        <label>Next Top-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Premise_ALM__c</fullName>
        <label>On Premise ALM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Premise_Git__c</fullName>
        <label>On Premise Git</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Opportunity that is in question, as it related to this org. This will be used by Sales Engineers for Orgs that are spun for trial purposes to win an opportunity.</description>
        <inlineHelpText>Link to the opportunity related to this org.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Salesforce Orgs</relationshipLabel>
        <relationshipName>Salesforce_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>OrgId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Edition__c</fullName>
        <label>Org Edition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer Edition</fullName>
                </value>
                <value>
                    <fullName>Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Unlimited Edition</fullName>
                </value>
                <value>
                    <fullName>Base Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corporate Entity to which the Salesforce Org is related.</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salesforce Orgs</relationshipLabel>
        <relationshipName>Salesforce_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_migration_date__c</fullName>
        <label>Planned migration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org_At_Risk_Status__c</fullName>
        <formula>IMAGE(
IF(Last_Overall_Activity__c&lt;=Today()-30, &quot;/img/samples/flag_red.gif&quot;,
IF(Last_Overall_Activity__c&lt;=Today()-14, &quot;/img/samples/flag_yellow.gif&quot;,
IF(Last_Overall_Activity__c&gt;=Today()-14, &quot;/img/samples/flag_green.gif&quot;, &quot;/s.gif&quot;))),
&quot;Salesforce Org At Risk Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Org At Risk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_jobs__c</fullName>
        <label>Scheduled jobs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selenium_Minutes_Top_Up__c</fullName>
        <label>Selenium Minutes Top-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selenium_Minutes__c</fullName>
        <inlineHelpText>This value comes from Heroku backend with the number available Selenium Minutes to consume.</inlineHelpText>
        <label>Selenium Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <label>Server URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Expiration_Date__c</fullName>
        <label>Trial Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Channel Partner / Reseller</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webhooks_configured__c</fullName>
        <label>Webhooks configured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XCI_configured__c</fullName>
        <label>XCI configured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Salesforce Org</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Installation_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OrgId__c</columns>
        <columns>Copado_Licenses_Enabled__c</columns>
        <columns>CCM_Licenses_Enabled__c</columns>
        <columns>Credits__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Parent_Account__c</columns>
        <columns>Server_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Server_URL__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>all</label>
    </listViews>
    <listViews>
        <fullName>GCP_Orgs</fullName>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Backend__c</columns>
        <columns>Server_URL__c</columns>
        <columns>Copado_Server__c</columns>
        <columns>OrgId__c</columns>
        <columns>ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Server_URL__c</field>
            <operation>contains</operation>
            <value>https://api.backend.copado.com</value>
        </filters>
        <label>GCP Orgs</label>
    </listViews>
    <nameField>
        <label>Salesforce Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_server_requires_a_URL</fullName>
        <active>true</active>
        <description>Other server requires a URL</description>
        <errorConditionFormula>IF( AND(ISPICKVAL(Copado_Server__c ,&apos;Other&apos;), ISBLANK(Server_URL__c)),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Server_URL__c</errorDisplayField>
        <errorMessage>Other server requires a URL</errorMessage>
    </validationRules>
</CustomObject>